<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HotSeat</string>
    <string name="start_game">Начать игру</string>
    <string name="exit">Выход</string>
    <string name="title">Кто хочет стать миллионером?</string>
    <string name="take_money">Забрать деньги</string>
    <string name="help_5050">50/50</string>
    <string name="help_call">Звонок</string>
    <string name="help_audience">Зал</string>
    <string name="help_switch">Замена</string>
    <string name="restart">Играть снова</string>
    <string name="menu">В меню</string>
</resources>
